# game03

./: .gitignore  ARCHITECTURE.md  CMakeLists.txt  CMakeUserPresets.json  README.md
game03/: CMakeLists.txt  game03.cpp
game03/header/: animtimer.h  entity.h  gamerender.h  player.h  textureloader.h  texturemanager.h  tickupdate.h
game03/src/: animation.cpp  game03.cpp  gamerender.cpp  gamesave.cpp  player.cpp  textureloader.cpp  texturemanager.cpp  tickupdate.cpp
game03/src/engine/animation/: animation.cpp  animation.h
game03/src/engine/config/: configmanager.h
game03/src/engine/core/: core_loop.cpp  core_loop.h  game.cpp  game.h  game_loop.cpp  game_loop.h  time_manager.cpp  time_manager.h
game03/src/engine/input/: input_manager.cpp  input_manager.h
game03/src/engine/interfaces/: renderer_interface.h
game03/src/engine/rendering/: renderering_manager.cpp  rendering_manager.h  texturemanager.cpp  texturemanager.h
game03/src/engine/time/: time_manager.cpp  time_manager.h
game03/src/game/: config.json
game03/src/game/player/: player.cpp  player.h
